# modern-python-project-template

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODESTYLE.md  CONTRIBUTING.md  Makefile  README.md  STYLEGUIDE.md  benchmark.md  pyproject.toml  ruff.toml
.cursor/rules/: python.mdc
.github/workflows/: ci-checks.yml
data_processor/: classifier.py  cli.py  data.py  extractor.py  paths.py  utils.py
example_package/: __init__.py  ai_agent_demo.py  json_loading_benchmark.py  main.py  mandelbrot_benchmark.py
llm_training_example/: constants.py  data.py  mlx_model.py  tokenizer.py  torch_model.py  torch_optimization.py  train.py
llm_training_example/base_tokenizer/: tokenizer_config.json
src/llm_training/: cli.py  config.py  constants.py  data.py  optimization.py  tokenizer.py  train.py  trainer.py  utils.py
src/llm_training/base_tokenizer/: tokenizer.json
src/llm_training/model/: activations.py  blocks.py  gpt.py  norm.py  pe.py  transformer_blocks.py  weight_init.py
src/llm_training_example/: constants.py  data.py  model.py  train.py  utils.py
src/llm_training_example/base_tokenizer/: special_tokens_map.json
src/modern_python_template/: cli.py  paths.py
tests/: __init__.py  conftest.py  test_cli.py  test_example_package.py
