[project]
name = "llm-training"
version = "0.1.0"
description = "A template for Python projects using modern tooling and best practices."
authors = [
    { name = "Ron Leizrowice", email = "ron.leizrowice@protonmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
 "datasets>=4",
 "pydantic<2.12",
 "wandb>=0.22",
 "transformers>=4",
 "torch>=2",
 'triton-windows>=3.5; platform_system == "Windows"',
 'triton>=3.5; platform_system == "Linux"',
 "types-tqdm>=4",
 "click>=8",
]

[project.scripts]
train = "llm_training.cli:train"
overfit = "llm_training.cli:overfit"

[dependency-groups]
dev = [
  "deptry>=0.23",
  "pip>=25",
  "pyrefly>=0.37",
  "pytest>=8",
  "pytest-asyncio>=1",
  "pytest-sugar>=1",
  "pytest-xdist>=3",
  "ruff>=0.14",
  "ty>=0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.pyrefly]
project-includes = ["src", "tests"]
project-excludes = [".venv"]

[tool.pyrefly.errors]
implicitly-defined-attribute = true

[build-system]
requires = ["uv_build>=0.9"]
build-backend = "uv_build"
