[project]
name = "data-processor"
version = "0.1.0"
description = "An example data-processor using pydantic-ai"
authors = [
    { name = "Ron Leizrowice", email = "ron.leizrowice@protonmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25",
    "httpx>=0.28",
    "logfire[httpx]>=4",
    "numpy>=2",
    "orjson>=3",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "pydantic>=2",
    "pydantic-ai-slim[openai]>=1.39.0",
    "pyprojroot>=0.3.0",
    "python-dotenv>=1.2.1",
    "rich>=14",
]

[project.scripts]
benchmark-classification = "data_processor.cli:benchmark_classification"
benchmark-extraction = "data_processor.cli:benchmark_extraction"

[dependency-groups]
dev = [
  "deptry>=0.23",
  "ipykernel>=7",
  "jupyter>=1",
  "pip>=25",
  "pytest>=8",
  "pytest-asyncio>=1",
  "pytest-sugar>=1",
  "pytest-xdist>=3",
  "ruff>=0.14",
  "ty>=0.0.5",
]

[tool.uv.sources]
data-processor = { workspace = true }

[tool.uv.workspace]
members = [
    "data-processor",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[build-system]
requires = ["uv_build>=0.9"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "data_processor"
module-root = ""
